--- a/rro_overlays/CarrierConfigOverlay/AndroidManifest.xml
+++ b/rro_overlays/CarrierConfigOverlay/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.carrierconfig.overlay.messi">
+    package="com.android.carrierconfig.overlay.golf">
     
     <application android:hasCode="false"/>
     <overlay
